--- a/MySolitaire/.gitignore
+++ b/MySolitaire/.gitignore
@@ -1,12 +1,15 @@
 *.iml
 .gradle
 /local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 
+# exclude the IDE caches and user-specific settings
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
 /.idea/sonarlint
+/.idea/caches
+/.idea/vcs.xml
