--- a/MySolitaire/app/src/main/AndroidManifest.xml
+++ b/MySolitaire/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PlayKlondikeActivity"
+            android:name=".models.games.PlayKlondikeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_play_klondike"
             android:theme="@style/FullscreenTheme"></activity>
