--- a/MySolitaire/app/build.gradle
+++ b/MySolitaire/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.gstratton.games.mysolitaire"
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,11 +26,27 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:28.0.0-beta01'
-    implementation 'com.android.support:support-v4:28.0.0-beta01'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation (
+            'com.android.support:appcompat-v7:27.1.1',
+            'com.android.support.constraint:constraint-layout:1.1.2',
+            'com.android.support:design:27.1.1',
+            'com.android.support:support-v4:27.1.1',
+            'com.jakewharton:butterknife:8.8.1'
+    )
+    annotationProcessor (
+            'com.jakewharton:butterknife-compiler:8.8.1'
+    )
+    androidTestImplementation (
+            'com.android.support.test:runner:1.0.2',
+            'com.android.support.test.espresso:espresso-core:3.0.2'
+    )
+    testCompileOnly (
+            'junit:junit:4.12'
+    )
+    testImplementation (
+            'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    )
+    testRuntimeOnly (
+            'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+    )
 }
