--- a/MySolitaire/app/src/main/AndroidManifest.xml
+++ b/MySolitaire/app/src/main/AndroidManifest.xml
@@ -19,11 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".models.games.PlayKlondikeActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_play_klondike"
-            android:theme="@style/FullscreenTheme"></activity>
+        <activity android:name=".models.games.PlayKlondike2Activity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
